<resources>
    <string name="app_name">Weather Application</string>
    <string name="city_name">Minsk, Belarus</string>
    <string name="temperature">10</string>
    <string name="status">Mostly clear</string>
    <string name="date">Oct 19 Wed</string>
    <string name="temp_range">10°C / -1°C</string>
    <string name="not_network">No network connection...</string>
    <string name="degree">°C</string>
    <string name="manage_cities">Manage cities</string>
    <string name="enter_city">Enter city name</string>
    <string name="search_city">Search City</string>
    <string name="search">Search</string>
</resources>