<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:clickable="false"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/city_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:clickable="false"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/degree"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintStart_toEndOf="@+id/temperature" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:clickable="false"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/temperature"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toTopOf="@+id/temperature" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/temp_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:clickable="false"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/temp_range"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintStart_toEndOf="@+id/degree"
        app:srcCompat="@drawable/bc"
        app:tint="@color/white"
        tools:ignore="ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cast"
        android:layout_width="0dp"
        android:layout_height="137dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_range" />

</androidx.constraintlayout.widget.ConstraintLayout>